--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "country-state-city": "^3.2.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
+    "langchain": "^0.1.28",
     "moment": "^2.30.1",
+    "openai": "^4.28.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
@@ -23,6 +25,7 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "serpapi": "^2.0.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14",
     "web-vitals": "^2.1.4"
